--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     password: sangwon
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       format_sql: true
     properties:
       hibernate:
@@ -19,6 +19,8 @@ spring:
   sql:
     init:
       mode: always
+  thymeleaf:
+    cache: false
 
 logging:
   level:
