--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,12 @@ spring:
 #    url: jdbc:oracle:thin:@localhost:1521/xepdb1
 #    username: hoxy
 #    password: hoxy
+  profiles:
+    active: pay
   datasource:
-    url: jdbc:oracle:thin:@sophons.iptime.org:1521:xe
-    username: sangwon
-    password: sangwon
+    url: jdbc:oracle:thin:@sophons.iptime.org:1523:xe
+    username: junghyeon
+    password: ubca@2573
   jpa:
     hibernate:
       ddl-auto: update
