--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 application-pay.yml
+message-transfer.properties
+application.yml
 
 ### STS ###
 .apt_generated
