--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -84,4 +84,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            ssh backend 'nohup bash /home/ec2-user/run.sh 2>&1 &'&\ exit
+            nohup ssh backend 'nohup bash /home/ec2-user/scripts/backend.sh 2>&1 &'&\ exit
