--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   profiles:
     active: pay
   jpa:
-    hibernate:
-      ddl-auto: create
+    #    hibernate:
+    #      ddl-auto: none
 
     properties:
       hibernate:
