[BUGFIX] 주문을 위한 코드 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   profiles:
     active: pay
   jpa:
-    #    hibernate:
-    #      ddl-auto: none
+    hibernate:
+      ddl-auto: none
 
     properties:
       hibernate:
